# netbox-graylog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pypi.yml  release.yml
netbox_graylog/: __init__.py  forms.py  graylog_client.py  models.py  navigation.py  urls.py  views.py  widgets.py
netbox_graylog/migrations/: 0001_initial.py  0002_rename_model.py
netbox_graylog/templates/netbox_graylog/: device_logs_tab.html  endpoint_logs_tab.html  logs_tab.html  logs_tab_content.html  settings.html  vm_logs_tab.html
netbox_graylog/templates/netbox_graylog/widgets/: graylog_summary.html
screenshots/: README.md
