[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-graylog"
version = "1.0.0"
description = "NetBox plugin to display Graylog logs in device and VM detail pages"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "OHSU TUCE", email = "tuce@ohsu.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["netbox", "graylog", "logging", "plugin"]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/sieteunoseis/netbox-graylog"
Repository = "https://github.com/sieteunoseis/netbox-graylog"
Issues = "https://github.com/sieteunoseis/netbox-graylog/issues"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["netbox_graylog*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
